After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719833 - Newly created wayland window do not trigger a map effect
Newly created wayland window do not trigger a map effect
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
git master
Other Linux
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-12-04 11:15 UTC by Lionel Landwerlin
Modified: 2013-12-04 13:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
core: window: enable create effect for new wayland windows (955 bytes, patch)
2013-12-04 11:16 UTC, Lionel Landwerlin
committed Details | Review

Description Lionel Landwerlin 2013-12-04 11:15:30 UTC
There are no map effect for wayland windows.
Comment 1 Lionel Landwerlin 2013-12-04 11:16:11 UTC
Created attachment 263497 [details] [review]
core: window: enable create effect for new wayland windows
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-12-04 13:55:47 UTC
Review of attachment 263497 [details] [review]:

OK.