core: window: enable create effect for new wayland windows

https://bugzilla.gnome.org/show_bug.cgi?id=719833